syntax = "proto3";

package order;

service OrderService {
    rpc CreateOrder (OrderRequest) returns (OrderResponse);
    rpc GetOrders (Empty) returns (OrderList);
}

message Empty {}

message OrderRequest {
    int32 product_id = 1;
    int32 user_id = 2;
}

message OrderResponse {
    int32 id = 1;
    int32 user_id = 2;
    int32 product_id = 3;
}

message Order {
    int32 id = 1;
    int32 user_id = 2;
    int32 product_id = 3;
}

message OrderList {
    repeated Order orders = 1;
}
